--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod_start": "NODE_ENV=production nodemon index.js"
   },
   "keywords": [
     "social"
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "kue": "^0.11.6",
     "mongoose": "^6.8.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
     "nodemailer": "^6.8.0",
