--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "My all social web applications",
   "main": "index.js",
+
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start": "NODE_ENV=production & nodemon index.js"
+    "prod_start": "SET NODE_ENV=production & nodemon index.js"
   },
   "keywords": [
     "social"
@@ -18,11 +19,13 @@
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "del": "^7.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.0.0",
     "gulp-rev": "^9.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
@@ -38,6 +41,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^3.0.4",
+    "run-sequence": "^2.2.1",
+    "sass": "^1.58.0",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
